Fixed task switcher app title overflowing

--- a/src/sass/X/system_popups/taskSwitcher.sass
+++ b/src/sass/X/system_popups/taskSwitcher.sass
@@ -44,8 +44,11 @@
             >span
                 font-size: 4em
         .app_name
+            max-width: 100%
+            text-align: center
             overflow: hidden
             white-space: nowrap
             text-overflow: ellipsis
             font-size: 0.9em
+            margin: auto
             height: 0em
